# Deportations-Fallout

./: .gitignore  LICENSE  README.md  local_config.example.py  mccrary.do  pyproject.toml  replicate.py  requirements.txt
notebooks/: appendix.ipynb  collect_data.ipynb  run_analysis.ipynb
run/: collect_data.py  run_analysis.py
scripts/: appendix.py  collect_data.py  run_analysis.py  validate_setup.py
src/: mccrary.do
src/analysis/: analyse01_descriptives.py  analyse02_main_results.py  analyse03_migrations.py  analyse04_grounds_of_residency.py  appendix_a.py  appendix_b.py  appendix_c.py  run_analysis.py
src/depo_paper/: __init__.py  config.py  mccrary.do
src/depo_paper/analysis/: __init__.py  appendix_a.py  appendix_b.py  appendix_c.py  descriptives.py  grounds_of_residency.py  main_results.py  migrations.py
src/depo_paper/tools/: __init__.py  formatting.py  io.py  knn_hd.py  tables.py
src/deportations_fallout/: dynamic_did.py  ipcw.py  knn_hd.py  tabulate.py
src/deportations_fallout/etl/: construct_panel.py  crime_categories.py  define_population.py  female_foreignborn.py  find_spouses.py  grounds_of_residency.py  spouse_outcomes.py
src/deportations_fallout/figures/: __init__.py  figure_1.py  figure_2.py  figure_3.py  figure_4.py  figure_5.py  figure_6.py  figure_7.py  figure_8.py  figure_9.py  figure_a1.py  figure_b1.py  figure_b2.py  figure_c1.py  figure_c2.py
src/deportations_fallout/lookups/: countries.csv
src/deportations_fallout/tables/: __init__.py  table_1.py  table_2.py  table_3.py  table_a1.py  table_b1.py  table_b2.py  table_b3.py  table_c1.py
src/deportations_fallout/utils/: lookup.py  stata_io.py
src/tools/: io.py  ipcw.py  paths.py  plots.py  tables.py
src/tools/data/: judicial_districts.csv
