[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "deportation_orders"
version = "2.0.0"
description = "Replication package for paper Deportation's Fallout: Evidence from Denmark"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Noa Hendel", email = "nhe@rff.dk" }
]

dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "matplotlib",
    "pyarrow",
    "linearmodels",
    "statsmodels",
    "scikit-learn"
]

[project.optional-dependencies]
notebooks = [
    "ipykernel",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
