[build-system]
requires = ["setuptools>=61", "wheel"]
build-backends = "setuptools.build_meta"

[project]
name = "deportations-fallout"
version = "2.0.0"
description = "Replication package for Deportation's Fallout: Evidence from Denmark"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Noa Hendel", email = "nhe@rff.dk" },
]
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "matplotlib",
    "pyarrow",
    "linearmodels",
    "statsmodels",
    "scikit-learn"
]

[project.optional-dependencies]
notebooks = ["ipykernel>=6.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
